--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="fatherLabel">Father Time!</h1>
     <div id="clock-container">
+        <label id="firstLabel">US Clock </div>
         <div id="clock">00:00:00</div>
     </div>
 
